@@ -1,16 +1,15 @@
-
 import java.time.LocalDate;
 
 /**
- * Base class for all tasks.
+ * Base class representing a generic task.
  */
 public abstract class Task {
-    private int id;
+    private final int id;
     private String title;
     private String description;
-    private EffortLevel effortLevel; // LOW, MEDIUM, HIGH
-    private boolean completed;
+    private LevelMood effortLevel;
     private LocalDate dueDate;
+    private boolean isCompleted;
 
     /**
      * Constructs a new Task with the specified parameters.
@@ -22,151 +21,73 @@ public abstract class Task {
      * @param dueDate the due date of the task
      * @throws IllegalArgumentException if id is negative, title is null/empty, or effortLevel is null
      */
-    public Task(int id, String title, String description, EffortLevel effortLevel, LocalDate dueDate) {
-        setId(id);
-        setTitle(title);
-        setDescription(description);
-        setEffortLevel(effortLevel);
-        this.completed = false;
+    protected Task(int id, String title, String description, 
+                  LevelMood effortLevel, LocalDate dueDate) {
+        if (id < 0) {
+            throw new IllegalArgumentException("ID cannot be negative");
+        }
+        if (title == null || title.trim().isEmpty()) {
+            throw new IllegalArgumentException("Title cannot be null or empty");
+        }
+        if (effortLevel == null) {
+            throw new IllegalArgumentException("Effort level cannot be null");
+        }
+        
+        this.id = id;
+        this.title = title.trim();
+        this.description = description != null ? description : "";
+        this.effortLevel = effortLevel;
         this.dueDate = dueDate;
+        this.isCompleted = false;
     }
 
-    // Encapsulation with validation
-    /**
-     * Returns the unique identifier of the task.
-     *
-     * @return the task's id
-     */
+    // Getters and Setters
     public int getId() {
         return id;
     }
 
-    /**
-     * Sets the unique identifier of the task.
-     *
-     * @param id the new id (must be non-negative)
-     * @throws IllegalArgumentException if id is negative
-     */
-    public void setId(int id) {
-        if (id < 0) {
-            throw new IllegalArgumentException("Task id must be non-negative.");
-        }
-        this.id = id;
-    }
-
-    /**
-     * Returns the title of the task.
-     *
-     * @return the task's title
-     */
     public String getTitle() {
         return title;
     }
 
-    /**
-     * Sets the title of the task.
-     *
-     * @param title the new title (cannot be null or empty)
-     * @throws IllegalArgumentException if title is null or empty
-     */
     public void setTitle(String title) {
-        if (title == null || title.isBlank()) {
-            throw new IllegalArgumentException("Task title cannot be empty.");
+        if (title == null || title.trim().isEmpty()) {
+            throw new IllegalArgumentException("Title cannot be null or empty");
         }
         this.title = title.trim();
     }
 
-    /**
-     * Returns the description of the task.
-     *
-     * @return the task's description (empty string if not set)
-     */
     public String getDescription() {
         return description;
     }
 
-    /**
-     * Sets the description of the task.
-     *
-     * @param description the new description (can be null, will be converted to empty string)
-     */
     public void setDescription(String description) {
-        this.description = (description == null) ? "" : description.trim();
+        this.description = description != null ? description : "";
     }
 
-    /**
-     * Returns the effort level required for the task.
-     *
-     * @return the task's effort level
-     */
-    public EffortLevel getEffortLevel() {
+    public LevelMood getEffortLevel() {
         return effortLevel;
     }
 
-    /**
-     * Sets the effort level required for the task.
-     *
-     * @param effortLevel the new effort level (cannot be null)
-     * @throws IllegalArgumentException if effortLevel is null
-     */
-    public void setEffortLevel(EffortLevel effortLevel) {
+    public void setEffortLevel(LevelMood effortLevel) {
         if (effortLevel == null) {
-            throw new IllegalArgumentException("Effort level cannot be null.");
+            throw new IllegalArgumentException("Effort level cannot be null");
         }
         this.effortLevel = effortLevel;
     }
 
-    /**
-     * Checks if the task is marked as completed.
-     *
-     * @return true if the task is completed, false otherwise
-     */
-    public boolean isCompleted() {
-        return completed;
-    }
-
-    /**
-     * Sets the completion status of the task.
-     *
-     * @param completed true to mark as completed, false otherwise
-     */
-    public void setCompleted(boolean completed) {
-        this.completed = completed;
-    }
-
-    /**
-     * Returns the due date of the task.
-     *
-     * @return the task's due date
-     */
     public LocalDate getDueDate() {
         return dueDate;
     }
 
-    /**
-     * Sets the due date of the task.
-     *
-     * @param dueDate the new due date
-     */
     public void setDueDate(LocalDate dueDate) {
         this.dueDate = dueDate;
     }
 
-    /**
-     * Each specific task type can give a different summary.
-     */
-    public abstract String getTypeLabel();
-
-    /**
-     * Returns a string representation of the task.
-     *
-     * @return a formatted string containing task details
-     */
-    @Override
-    public String toString() {
-        return "[" + getTypeLabel() + "] " + title +
-                " (Effort: " + effortLevel +
-                ", Completed: " + completed +
-                ", Due: " + dueDate + ")";
+    public boolean isCompleted() {
+        return isCompleted;
     }
-}
+
+    public void setCompleted(boolean completed) {
+        isCompleted = completed;
+    }
